# sdl2-playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  notes.md  run.sh  vcpkg.json
Game Loops Tests/: main.c
SDL A-Star Pathfinding first test implementation/: game.c  main.c
SDL Animated sprite tests/: CMakeLists.txt  exemplo.c  main.c
SDL Paint clone/: main.c  utils.c
SDL bullet move by rotation/: main.c  utils.c
SDL fire ty mouse direction/: Makefile  main.c
SDL flappy bird clone/: main.c
SDL move and rotate to mouse/: main.c  utils.h
SDL move sprite to rotation/: main.c
cmake/: FindSDL2_ttf.cmake
matrix-effect/: Makefile
matrix-effect/src/: main.c
parallax-effect-in-sdl-and-c/: Makefile  main.c
projects/@data-structures/: CMakeLists.txt
projects/@data-structures/include/: array.h
projects/@data-structures/src/: array.c
projects/@framework/: framework.c  framework.h
projects/_data-structures/include/: list.h
projects/_data-structures/src/: list.c  main.c
projects/_framework/: CMakeLists.txt  game.c
projects/_framework-old/: sprite.c
projects/_tinyframework/: CMakeLists.txt
projects/_tinyframework/include/: context.h  events.h  initialization.h  miscellaneous.h  sprite.h  tinyframework.h  vector.h
projects/_tinyframework/src/: context.c  events.c  initialization.c  miscellaneous.c  sprite.c  vector.c
projects/animated-sprite/: CMakeLists.txt  main.c
projects/animated-sprite-ideas/: CMakeLists.txt  framework.c  framework.h  game.c  main.c  sprite.c  sprite.h
projects/circle-drawing/: main.c
projects/cpp/: CMakeLists.txt
projects/cpp/include/: Window.h
projects/cpp/src/: Window.cpp  main.cpp
projects/fire-to-mouse-direction/: CMakeLists.txt  main.c
projects/flappy-bird-clone/: main.c
projects/framework-old/: framework.c  framework.h  game.c  sprite.h
projects/game-loop/: main.c  utils.c  utils.h
projects/matrix-effect/: main.c
projects/move-and-rotate-by-mouse/: main.c  utils.c  utils.h
projects/move-to-rotation-direction/: main.c  utils.c
projects/paint-clone/: CMakeLists.txt  game.c  main.c  utils.c  utils.h
projects/parallax-effect/: main.c
projects/pathfinding/: CMakeLists.txt  game.c  game.h  main.c  utils.c
projects/rotated-fire/: main.c  utils.c  utils.h
projects/separating-axis-theorem/: CMakeLists.txt  framework.c  framework.h  main.c
projects/standalone-animated-sprite/: main.c
projects/standalone-circle-drawing/: CMakeLists.txt  main.c
projects/standalone-flappy-bird-clone/: main.c
projects/standalone-matrix-effect/: CMakeLists.txt  main.c
projects/standalone-parallax-effect/: CMakeLists.txt  main.c
projects/state-machine/: CMakeLists.txt  SceneManager.c  SceneManager.h  main.c  scene1.c  scene2.c  scene3.c  window.c  window.h
projects/tinyframework-fire-to-mouse-direction/: CMakeLists.txt  main.c
projects/tinyframework-follow-mouse/: main.c
projects/tinyframework-game-loop/: main.c
projects/tinyframework-move-to-rotation-direction/: CMakeLists.txt  main.c
projects/tinyframework-rotated-fire/: CMakeLists.txt  main.c
projects/tinyframework-topdown-shooter/: CMakeLists.txt  bullet.c  bullet.h  enimy.c  enimy.h  main.c  player.c  player.h
projects/topdown-shooter/: CMakeLists.txt  bullet.c  bullet.h  enimy.c  enimy.h  framework.c  framework.h  game.c  game.h  main.c  player.c  player.h
sdl2-draw-circle/: Makefile
sdl2-draw-circle/src/: main.c
sdl2-tests/: forest.c  main.c  test.c
